[🚀 사이클2 - 미션 (예약 변경/취소와 에러 처리)] 쿠다(김병웅) 미션 제출합니다. (#421)
* refactor : 검증 예외 추가

* refactor : 검증 예외 추가

# Conflicts:
#	src/main/java/roomescape/reservation/exception/ReservationNotFoundException.java

* refactor : url 경로 일관성 보장

* refactor : 검증 예외 추가

* refactor : 검증 예외 추가

* refactor : 날짜 검증 예외 추가

* refactor : 핸들러 매핑 수정

* refactor : 서비스 흐름 테스트 추가

* refactor : 테스트 시간에 종속되지 않게 수정

* refactor : 테스트 Fixture 방식 변경

* feat : 임시 인증 정보 구현

* feat : 예약자 기준 조회, 삭제, 수정 구현

* feat : ai 이용 타임리프 페이지 변경

* feat : 예약자 수정, 삭제, 조회 단위 테스트 구현

* test : 테스트 오류 수정

* refactor : 예외 응답 수정

* docs : 예외 명세서 작성

* feat : 예약 있는 테마 삭제 불가 예외 구현

* test : ReservationAdminApiTest 다시 정의

* test : Reservation 인수 테스트 정의

* test : ReservationTime 인수 테스트 정의

* test : ReservationTime 인수 테스트 정의

* test : Theme 인수 테스트 정의

* test : 테스트 메소드명 통일

* refactor : 파라미터 관련 핸들러 추가

* refactor : controller view 단에서 도메인을 알 수 없게 서비스 DTO 추가 및 테스트 변경

* refactor : 예약 가능 시간 1번의 쿼리로 변경

* test : 변경에 따른 service 테스트 수정

* refactor : 날짜 검증 도메인으로 이동

* refactor : 테스트 오류 수정

* test : 서비스 테스트 통합으로 변경

* test : service 통합 테스트 화 및 테스트 예외 체크 세부화

* refactor : 인증 예외 처리 및 테스트 리팩토링

* test : 테스트 최소 스코프 검증 진행

* refactor : InvalidException 이름 서식 통일

* refactor : valid 도입

* refactor : 인증 예외 도입

* refactor : 예외 로깅 계층 수준 정렬

* refactor : 로깅 표시 정보 수정

* refactor : Aggregate에 맞게 객체 관계 수정

* refactor : 201 CREATED location 설정

* refactor : 권한 부족 예외 설정

* refactor : 페이지 수정

* refactor : 페이지 수정

* refactor : 페이지 수정

* test : valid 테스트 추가

* test : service Test 형식 변경

* refactor : 도메인에 검증 조건 이동 및 예외 이름 도메인에 맞게 변경

* test : 도메인 검증 책임 이동 이후 테스트 갱신

* refactor : 예외 네이밍 http에 종속되지 않게 수정

* refactor : 페이지 수정 api 추가

* refactor : 엔코딩 null 체크 제거

* refactor : 시간 의존성 외부 분리

* refactor : TimeManager로 이름 정정

* feat : swagger 추가

* feat : swagger 추가

* refactor : update 문 row count 검증 추가

* refactor : 미사용 메소드 제거

* chore : import 문 최적화